# banditalgorithms

./: pyproject.toml
banditalgorithms/: adaptive_thompson_sampling.py  bandit_types.py  decay_linucb.py  dynamic_linucb.py  epsilon_greedy.py  inverse_matrix.py  linear_thompson_sampling.py  linucb.py  thompson_sampling.py  time_varying_thompson_sampling.py  ucb1.py
tests/: test_adaptive_thompson_sampling.py  test_decay_linucb.py  test_dynamic_linucb.py  test_epsilon_greedy.py  test_inverse_matrix.py  test_linear_thompson_sampling.py  test_linucb.py  test_thompson_sampling.py  test_time_varying_thompson_sampling.py  test_ucb1.py
