[tool.poetry]
name = "banditalgorithms"
version = "0.1.0"
description = ""
authors = ["monochromegane"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pysen = "^0.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
